[package]
name = "raycaster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
raycast_utils = { path = "raycast_utils" }
map = { path = "map" }
draw = { path = "draw" }
softbuffer = "0.4.0"
winit = "0.29.4"
